--- a/css/theme.css
+++ b/css/theme.css
@@ -107,7 +107,7 @@ a {
 }
 
 .blur-bg {
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: rgb(169 83 83 / 30%);
   -webkit-backdrop-filter: blur(5px) !important;
   backdrop-filter: blur(5px) !important;
   border: 1px solid rgba(255, 255, 255, 0.25);
